<resources>
    <string name="app_name">Расписание</string>
    <string name="widget_name">Расписание с выбором дня</string>
    <string name="app_subtitle">Расписание с ежедневным обновлением в 01:00 и офлайн-архивом.</string>
    <string name="section_group">Группа</string>
    <string name="section_group_hint">Введите группу так же, как на сайте колледжа. Например: П-210.</string>
    <string name="group_hint">П-210</string>
    <string name="save_refresh">Сохранить и обновить</string>
    <string name="section_widget">Виджет</string>
    <string name="section_widget_hint">После сохранения добавьте виджет на главный экран. В виджете можно выбирать дни и листать недели. Архив обновляется ежедневно около 01:00.</string>
    <string name="pin_widget">Добавить виджет</string>
    <string name="section_status">Состояние</string>
    <string name="status_no_group">Группа пока не выбрана. Введите группу и нажмите «Сохранить и обновить».</string>
    <string name="status_enter_group">Введите группу, например П-210.</string>
    <string name="status_enter_teacher">Введите ФИО преподавателя</string>
    <string name="teacher_hint">ФИО преподавателя</string>
    <string name="teacher_section_hint">Введите фамилию или ФИО преподавателя так же, как на сайте. Например: Абилова.</string>
    <string name="qr_pick_title">Выберите QR-код</string>
    <string name="qr_load_failed">Не удалось загрузить изображение</string>
    <string name="qr_save_error">Ошибка сохранения QR-кода: %1$s</string>
    <string name="city_picker_title">Город прогноза</string>
    <string name="city_custom_title">Ссылка на город Gismeteo</string>
    <string name="city_custom_message">Откройте gismeteo.ru, найдите город и вставьте сюда ссылку вида https://www.gismeteo.ru/weather-yekaterinburg-11120/</string>
    <string name="city_custom_hint">https://www.gismeteo.ru/weather-city-1234/</string>
    <string name="city_link_error">Не удалось распознать ссылку. Нужна вида weather-city-1234</string>
    <string name="city_updated">Город погоды: %1$s. Обновляю прогноз…</string>
    <string name="teacher_selected">Выбран преподаватель: %1$s</string>
    <string name="error_webview_no_activity">Резервный браузер недоступен в фоне, используется только API</string>
    <string name="error_webview_timeout">Таймаут загрузки расписания</string>
    <string name="status_saved">Группа сохранена. Загружаю полное расписание для офлайн-доступа.</string>
    <string name="status_selected_group">Выбрана группа: %1$s</string>
    <string name="status_selected_day">День: %1$s</string>
    <string name="status_cache_summary">Сохранено локально: %1$d дней · обновлено %2$s</string>
    <string name="status_no_day_data">Для выбранного дня локальных данных нет. Подключитесь к интернету и обновите расписание.</string>
    <string name="status_last_error">Последняя ошибка:</string>
    <string name="status_last_update_error">Последняя ошибка обновления:</string>
    <string name="widget_setup_title">Расписание</string>
    <string name="widget_setup_subtitle">Группа не выбрана</string>
    <string name="widget_setup_body">Откройте приложение и укажите группу.</string>
    <string name="widget_loading_subtitle">Обновление</string>
    <string name="widget_loading_body">Загружаю расписание...</string>
    <string name="widget_error_subtitle">Ошибка обновления</string>
    <string name="widget_last_data_error">Последние данные · ошибка обновления</string>
    <string name="widget_today">Сегодня</string>
    <string name="widget_group">группа</string>
    <string name="widget_no_lessons">Занятий нет</string>
    <string name="widget_no_day_data">Для этого дня нет сохраненных данных.</string>
    <string name="widget_previous_week">‹</string>
    <string name="widget_next_week">›</string>
    <string name="section_day">День расписания</string>
    <string name="section_day_hint">Выберите дату. Сохраненные дни открываются без интернета.</string>
    <string name="select_day">Выбрать день</string>
    <string name="step_1">1</string>
    <string name="step_2">2</string>
    <string name="step_3">3</string>

    <!-- Погода (Gismeteo, Челябинск) -->
    <string name="weather_widget_title">Погода · Челябинск</string>
    <string name="weather_loading">Загружаю прогноз…</string>
    <string name="weather_no_data">Нет данных о погоде</string>
    <string name="weather_toggle_button">ПОГОДА</string>
    <string name="weather_back_button">РАСП</string>
    <string name="weather_city_default">Челябинск</string>
    <string name="weather_city_custom">Свой город (вставить ссылку)</string>
    <!-- Tetris -->
    <string name="tetris_title">Тетрис</string>
    <string name="tetris_widget_button">Тетрис</string>
    <string name="tetris_pause">Пауза</string>
    <string name="tetris_paused">Пауза</string>
    <string name="tetris_continue">Продолжить</string>
    <string name="tetris_new_game">Новая игра</string>
    <string name="tetris_game_over">Игра окончена</string>
    <string name="tetris_score">Счёт:</string>
    <string name="tetris_best">Рекорд:</string>
    <string name="tetris_level">Уровень:</string>
    <string name="tetris_lines">Линии:</string>
    <string name="tetris_next">Далее</string>
    <string name="tetris_rotate">Повернуть</string>
    <string name="tetris_rotate_desc">Повернуть фигуру</string>
    <string name="tetris_soft_drop">Вниз</string>
    <string name="tetris_soft_drop_desc">Ускоренное падение</string>
    <string name="tetris_hard_drop">Сброс</string>
    <string name="tetris_hard_drop_desc">Мгновенное падение</string>
    <string name="tetris_left_desc">Сдвинуть влево</string>
    <string name="tetris_right_desc">Сдвинуть вправо</string>
    <string name="tetris_launch_desc">Играть в Тетрис</string>
</resources>
